Fix Loader on Mobile

--- a/src/styles/blocks/_loader.scss
+++ b/src/styles/blocks/_loader.scss
@@ -26,7 +26,7 @@ $shadow: #000;
   padding-bottom: rem(50);
 
   & + & {
-    padding-top: rem(100);
+    padding-top: rem(25);
   }
 }
 
